# pyCOT

./: .gitignore  Analysis.txt  COMPREHENSIVE_PLOTTING_GUIDE.md  ERCs.txt  ERCsDetails.txt  MSORN.txt  REACTION_CONTROL_ANALYSIS.txt  REACTION_CONTROL_SUMMARY.md  README.md  RN_visualize.html  Static_Abstraction_Graph_Hierarchy.html  cl_pth_test.txt  hierarchy_org_autopoietic.html  hierarchy_semiorg_farm.html  hierarchy_visualization.html  intervention_rankings.csv  pyproject.toml  reaction_network.html  reaction_networks_analysis.csv  results.txt  rn2_autopoietic.html  rn2_farm.html  state_dependent_costs_results.csv  strategy_comparison_results.csv  test.r  two_budget_game_state_costs.csv
.claude/: settings.local.json
Txt/: BZ_cycle.txt  Farm.txt  Lotka_Volterra.txt  Michaelis_Menten.txt  PassiveUncomforableIndignated_problemsolution.txt  Scenario1_baseline_only_reactions.txt  autopoietic.txt  cause_driven_conflict_gov.txt
Txt_sub_network/: sub_network.txt  sub_network_Farm.txt
analysis_output/: analysis_report.txt  analysis_report_optimized.txt  detailed_data_optimized.json
analysis_output_enhanced/: analysis_report_enhanced.txt  detailed_data_enhanced.json  s3_enhanced.py
benchmark_results/: benchmark_results.csv  erc_hierarchy_benchmark.csv  summary_statistics.txt
complete_synergy_results/: complete_synergy_analysis.csv
complete_synergy_results_random_alife/: complete_synergy_analysis.csv
hierarchy_analysis_results/: erc_details.csv  level_statistics.csv
networks/: complexModel_2Themes.txt
pyCOT/: Closure_Str_Script.py  Display.py  ERC_Hierarchy.py  (+51 more)
(+2348 files in other folders)
